# pybun

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.config/mise/: config.toml
.github/workflows/: automatic_release.yml  manual_release.yml  publish.yml  release.yml  test.yml
assets/: README.md  __main__.py  entry_points.txt
src/: get_latest_unreleased_bun_version.py  make_wheels.py  utils.py
